<resources>
    <string name="app_name">Assembler Calculator</string>

    <string name="action_settings">Settings</string>

    <string name="check">Do not show.</string>

    <!--buttons action bar -->
    <string name="actionBtnInstructions">Instructions</string>
    <string name="actionBtnOfProgramm">About the program</string>
    <string name="actionBtnFromDeveloper">More from Developers</string>
    <string name="actionBtnAdviseFriend">Suggest to friends</string>

    <string name="dialogCommentStr">If you like to use this program, please rate it in the google play market. Thank you!</string>
    <string name="dialogTitleTables">Tables of basic logic operations</string>

    <string name="btnRemind">Remind later</string>
    <string name="btnNotRemind">Do not remind</string>

    <string name="strAboutProgram">\tThe application is designed for computing, in which you can add, subtract, multiply and divide decimal, hexadecimal, octal and binary numbers. At the end of the number is the appropriate letter indicating the type of input.\n
    \tDesignations types of numbers:\n
    \t\t<b>b</b> - binary;\n
    \t\t<b>o</b> - octal;\n
    \t\t<b>d</b> - decimal;\n
    \t\t<b>h</b> - hexadecimal;\n
    \tMathematical operations can be performed as one, and for different types of numbers. The results are displayed in four versions, in: decimal, hexadecimal, octal and binary number systems. In the navigation bar, choice of output provided answers.\n
    \tIn addition to mathematical operations and provides logical operations <b>XOR</b>, <b>OR</b>, <b>AND</b> and <b>NOT</b>.\n
    \tIn the navigation bar, in addition to the instructions in the help of logical operations there are tables and table number systems.
    \n\n\tIf you like the app, please rate it in the Google Play and advise your friends\n\tThanks for the support and Enjoy using!\n</string>

    <string name="btnEstimate">Estimate</string>
    <string name="btnCancel">Cancel</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navBtnAdviseFriend">Suggest to friends</string>
    <string name="navBtnFromDevelopers">More from developers</string>
    <string name="navBtnAboutProgram">About the program</string>

    <string name="navDrawerTitle">Enjoy using</string>
    <string name="navigationTitle">Number systems:</string>
    <string name="navDrawerItemCommunication">Communication</string>
    <string name="navBtnHex">hexadecimal</string>
    <string name="navBtnOct">octal</string>
    <string name="navBtnBin">binary</string>
    <string name="navBtnDec">decimal</string>
    <string name="navBtnTablesLogicOperations">logic operations</string>
    <string name="navBtnNumberSystemTable">number system table</string>

    <string name="developers">Developers</string>
    <string name="developer">Developer Matatov Yury</string>
    <string name="painter">Painter Matatov Nikita</string>

    <string name="toastSendMail">Sending letter...</string>

</resources>
